--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "concurrently": "^8.0.1",
+    "cookies-next": "^4.1.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "^14.1.0",
@@ -29,5 +30,6 @@
   "devDependencies": {
     "@types/uuid": "^9",
     "daisyui": "^4.6.0"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
