--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
     "next-dev": "next dev --turbo",
-    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\" \"cargo run\"",
+    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
