--- a/package.json
+++ b/package.json
@@ -3,33 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
-    "next-dev": "next dev --turbo",
-    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
+    "fastapi-dev": "python3 -m uvicorn api.index:app --reload",
+    "next-dev": "next dev",
+    "dev": "concurrently --raw \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.4",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
-    "concurrently": "^8.0.1",
-    "cookies-next": "^4.1.1",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "^14.1.0",
-    "postcss": "8.4.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "uuid": "^9.0.1"
+    "@types/node": "22.4.1",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "autoprefixer": "10.4.20",
+    "concurrently": "^8.2.2",
+    "cookies-next": "^4.2.1",
+    "eslint": "9.9.0",
+    "eslint-config-next": "14.2.5",
+    "next": "^14.2.5",
+    "postcss": "8.4.41",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9",
-    "daisyui": "^4.6.0"
-  },
-  "packageManager": "yarn@4.1.0"
+    "@types/uuid": "^10.0.0",
+    "daisyui": "^4.12.10"
+  }
 }
